[project]
name = "fusionauth-example-firebase-mock-testing-vs-emulation"
version = "0.1.0"
description = "Example repo for the Why mocking sucks post illustrating testing Firebase services with mocking and with the Firebase emulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=6.6.0",
    "pytest>=8.3.4",
]
